save arezzo files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(beginner_tutorials2)
+project(ROS_ass1)
 
 ## Find catkin and any catkin packages
 find_package(catkin REQUIRED COMPONENTS roscpp rospy std_msgs genmsg sensor_msgs cv_bridge image_transport)
@@ -15,7 +15,7 @@ include_directories(SYSTEM ${OpenCV_INCLUDE_DIRS})
 # add_service_files(FILES AddTwoInts.srv)
 
 ## Generate added messages and services
-generate_messages(DEPENDENCIES std_msgs)
+#generate_messages(DEPENDENCIES std_msgs)
 
 ## Declare a catkin package
 catkin_package()
@@ -25,9 +25,6 @@ include_directories(include ${catkin_INCLUDE_DIRS})
 
 add_executable(image_converter src/image_converter.cpp)
 target_link_libraries(image_converter ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
-add_dependencies(image_converter beginner_tutorials2_generate_messages_cpp)
 
 
-# add_executable(listener src/listener.cpp)
-# target_link_libraries(listener ${catkin_LIBRARIES})
-# add_dependencies(listener beginner_tutorials2_generate_messages_cpp)
+
