--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>beginner_tutorials2</name>
+  <name>ROS_ass1</name>
   <version>0.0.0</version>
   <description>THE TERMINATOR</description>
 
