--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(ROS_ass1)
 
 ## Find catkin and any catkin packages
-find_package(catkin REQUIRED COMPONENTS roscpp rospy std_msgs genmsg sensor_msgs cv_bridge image_transport)
+find_package(catkin REQUIRED COMPONENTS message_generation roscpp rospy genmsg std_msgs cv_bridge image_transport)
 find_package( OpenCV REQUIRED )
 include_directories(
   ${catkin_INCLUDE_DIRS}
@@ -15,9 +15,10 @@ include_directories(SYSTEM ${OpenCV_INCLUDE_DIRS})
 # add_service_files(FILES AddTwoInts.srv)
 
 ## Generate added messages and services
-#generate_messages(DEPENDENCIES std_msgs)
 
-## Declare a catkin package
+
+add_message_files(FILES cords_rad.msg)
+generate_messages(DEPENDENCIES std_msgs)
 catkin_package()
 
 ## Build talker and listener
@@ -32,3 +33,6 @@ target_link_libraries(circle_finder ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
 
 add_executable(color_requester src/color_requester.cpp)
 target_link_libraries(color_requester ${catkin_LIBRARIES})
+
+add_executable(circle_drawer src/circle_drawer.cpp)
+target_link_libraries(circle_drawer ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
